--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset='utf-8'>
     <title>Swipe Test</title>
-    <script src='js/jquery-1.7.2.min.js'></script>
-    <script src='js/swiper.js'></script>
+    <script src='jquery-1.7.2.min.js'></script>
+    <script src='swiper.js'></script>
     <script>
       $(function() {
         $('#swiper').swiper({
